--- a/Ray_trace_1/Ray_trace_1.vcxproj
+++ b/Ray_trace_1/Ray_trace_1.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="Ray_trace_1.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="test_module.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray_trace_1.cpp" />
