--- a/Ray_trace_1/Ray_trace_1.vcxproj.filters
+++ b/Ray_trace_1/Ray_trace_1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="ray_trace.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="test_module.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray_trace_1.cpp">
